--- a/STBattle.html
+++ b/STBattle.html
@@ -1,4 +1,4 @@
-<html>
+<html class = "cover">
 	<head>
 		<title>SW Battle</title>
 
@@ -23,10 +23,10 @@
 					<div id = "chooseSide">
 						Choose your side
 					</div>
-					<div class = "lightLink" ng-click="chooseLight()">
+					<div class = "lightText" ng-click="chooseLight()">
 						<a href ="#/prep">Light</a>
 					</div>
-					<div class = "darkLink" ng-click="chooseDark()">
+					<div class = "darkText" ng-click="chooseDark()">
 						<a href ="#/prep">Dark</a>
 					</div>
 				</div>
@@ -34,44 +34,119 @@
 		</script>
 
 		<script type="text/ng-template" id="/prep.html">
-			<div class="row" ng-class = side>
-				<div class="col-md-6 col-md-offset-3">
-					{{heroName}}
-					{{heroPower1}}
-					{{heroPower2}}
-					{{armyName}}
-					{{armySize}}
+			<div class="" ng-class = side>
+
+				<div class = "heroDisplay">
+
+					<div class = "heroDisplayName">{{heroName}}</div>
+					<div class = "heroDisplayImage"><img src= {{heroImage}}></img></div>
+					<div class = "heroDisplayPower">
+						Abilities: <br/>
+						-{{heroPower1}} <br/>
+						-{{heroPower2}}
+					</div>
+					<a href = "#/hero"><button class = "changebtn btn btn-primary">Change Hero</button></a>
 				</div>
-			<a href = "#/army">go to army</a>
+
+				<div class = "armyDisplay">
+
+					<div class = "armyDisplayName">{{armyName}}</div>
+					<div class = "armyDisplayImage"><img src = {{armyImage}}></img></div>
+					<div class = "armyInfo">
+						Army Size: {{armySize}} <br/>
+						Weapons Level: {{armyWeapon}}
+					</div>
+					<a href = "#/army"><button class = "changebtn btn btn-primary">Change Army</button></a>
+				</div>
+				<a href = "#/battle"><div class = "begin">Begin Battle</div></a>
 			</div>
-
-
-
 		</script>
 
 		<script type="text/ng-template" id="/army.html">
-			army
-			<a href = "#/hero">go to hero</a>
+			<div class = "customizeScreen">
+				<div class = "armyCreation">
+					<div class = "creationTitle">Create your own Army</div>
+					<div class = "creationInputs">
+						<form class = "" name='data' ng-submit='addNewArmy(data)'>
+							<input id = "newArmyName" class = "form-control myinput" placeholder="Name" ng-model='data.name'/>
+
+							<input id = "newArmyImage" class = "form-control myinput" placeholder="Image src (default provided)" ng-model='data.image'/>
+
+							<input id = "newArmyWeapon" class = "form-control myinput" placeholder="Weapon Level (1-10)" ng-model='data.weapon'/>
+
+							<input id = "newArmySize" class = "form-control myinput" placeholder="Army Size (1-10)" ng-model='data.size'/>
+
+							<button class = "btn btn-primary myinput" type='submit'>Create</button>
+						</form>
+					</div>
+				</div>
+				<div ng-repeat="army in armies | side" class = "armyOption" ng-click="updateArmyChoice(army)">
+					<div class =  "armyOptionName">{{army.name}}</div>
+					<a href = "#/prep"><div class = "armyOptionImage"><img src = {{army.image}}></img></div></a>
+					Weapons Level: {{army.weapons}} </br>
+					Army Size: {{army.numbers}}
+				</div>
+			</div>
 		</script>
 
 		<script type="text/ng-template" id="/hero.html">
-			hero
-			<a href = "#/battle">go to battle</a>
+			<div class = "customizeScreen">
+				<div class = "armyCreation">
+					<div class = "creationTitle">Create your own Hero</div>
+					<div class = "creationInputs">
+						<form class = "" name='data' ng-submit='addNewHero(data)'>
+							<input class = "form-control myinput" placeholder="Name" ng-model='data.name'/>
+
+							<input class = "form-control myinput" placeholder="Image src (default provided)" ng-model='data.image'/>
+
+							<input class = "form-control myinput" placeholder="Ability 1 (see options below)" ng-model='data.ability1'/>
+
+							<input class = "form-control myinput" placeholder="Ability 2 (must be spelled correctly)" ng-model='data.ability2'/>
+
+							<button class = "btn btn-primary myinput" type='submit'>Create</button>
+						</form>
+					</div>
+				</div>
+				<div class = "abilityList">
+					 <div class = "creationTitle">Abilities</div></br>
+					<div ng-repeat="power in powers" class = "power">
+						<strong>{{power.name}}</strong></br>
+						{{power.description}}
+					</div>
+				</div>
+
+				<div ng-repeat="hero in heros | side" class = "armyOption" ng-click="updateHeroChoice(hero)">
+					<div class =  "armyOptionName">{{hero.name}}</div>
+					<a href = "#/prep"><div class = "armyOptionImage"><img src = {{hero.image}}></img></div></a>
+					Ability 1: {{hero.power1.name}} </br>
+					Ability 2: {{hero.power2.name}}
+				</div>
+			</div>
 		</script>
+
 
 		<script type="text/ng-template" id="/battle.html">
 			<div class="battleScreen">
-				<table style="width: 100%; height: 100">
-					<tr>
-						<td style="width: 50%; vertical-align: top">
-							<h2 class="lightText">Light</h2>
-						</td>
-						<td style="width: 50%; vertical-align: top">
-							<h2 class="darkText">Dark</h2>
-						</td>
-					</tr>
-				</table>
-				<a href = "#/menu">go to menu</a>
+				<div class = "lightDisplay">
+
+					<div class = "heroDisplayName">{{light.hero.name}}</div>
+					<div class = "heroDisplayImage"><img src= {{light.hero.image}}></img></div>
+					<div class = "armyDisplayImage"><img src = {{light.army.image}}></img></div>
+					<div class = "armyInfo">
+						Army Size:<span style = "color:red">{{lightLife}}</span> <br/>
+					</div>
+
+				</div>
+
+				<div class = "darkDisplay">
+
+					<div class = "heroDisplayName">{{dark.hero.name}}</div>
+					<div class = "heroDisplayImage"><img src= {{dark.hero.image}}></img></div>
+					<div class = "armyDisplayImage"><img src = {{dark.army.image}}></img></div>
+					<div class = "armyInfo">
+						Army Size: <span style = "color:red">{{darkLife}}</span> <br/>
+					</div>
+				</div>
 			</div>
 		</script>
 
