--- a/STBattle.html
+++ b/STBattle.html
@@ -18,120 +18,161 @@
 				<ui-view></ui-view>
 
 		<script type="text/ng-template" id="/menu.html">
-			<div class="row menuBackground">
+			<div class="menuBackground">
 				<div class="col-md-6 col-md-offset-3">
 					<div id = "chooseSide">
 						Choose your side
 					</div>
-					<div class = "lightText" ng-click="chooseLight()">
-						<a href ="#/prep">Light</a>
-					</div>
-					<div class = "darkText" ng-click="chooseDark()">
-						<a href ="#/prep">Dark</a>
+					<table style="width:100%; margin-top: 150px;">
+						<tr>
+							<td style="width: 50%;">
+								<div class = "lightLink" ng-click="chooseLight()">
+									<a href ="#/prep">Light</a>
+								</div>
+							</td>
+							<td>								
+								<div class = "darkLink" ng-click="chooseDark()">
+									<a href ="#/prep">Dark</a>
+								</div>
+							</td>
+						</tr>
+					</table>
+					<div class="gameDescription">
+						Choose a side to battle in the fight between the Light Side and the Dark Side. Use basic attacks to damage an enemy hero and charge your powers to unleash upon the enemy in this turn-based strategy game.
 					</div>
 				</div>
 			</div>
 		</script>
 
 		<script type="text/ng-template" id="/prep.html">
-			<div class="" ng-class = side>
-
-				<div class = "heroDisplay">
-
-					<div class = "heroDisplayName">{{heroName}}</div>
-					<div class = "heroDisplayImage"><img src= {{heroImage}}></img></div>
-					<div class = "heroDisplayPower">
-						Abilities: <br/>
-						-{{heroPower1}} <br/>
-						-{{heroPower2}}
+			<div class="table" ng-class = side>
+				<div class="cell">
+					<table style="width: 100%">
+						<tr>
+							<td class = "unitDisplay">
+								<div style="height: 100%">
+									<div class = "unitDisplayName">{{heroName}}</div>
+									<div class = "unitDisplayImage"><img src= {{heroImage}}></img></div>
+									<div class = "heroDisplayPower" style="padding-top: 20px">
+										Abilities: {{heroPower1}}, {{heroPower2}}
+									</div>
+									<a href = "#/hero"><button class = "changebtn btn btn-primary">Change Hero</button></a>
+								</div>
+							</td>
+							<td class = "unitDisplay">
+								<div style="height: 100%">
+									<div class = "unitDisplayName">{{armyName}}</div>
+									<div class = "unitDisplayImage"><img src = {{armyImage}}></img></div>
+									<div class = "armyInfo" style="padding-top: 20px">
+										Army Size: {{armySize}} <br/>
+										Weapons Level: {{armyWeapon}}
+									</div>
+									<a href = "#/army"><button class = "changebtn btn btn-primary">Change Army</button></a>
+								</div>
+							</td>
+						</tr>
+					</table>
+					<div class = "beginButton">
+						<a href = "#/battle">Begin Battle</a>
 					</div>
-					<a href = "#/hero"><button class = "changebtn btn btn-primary">Change Hero</button></a>
-				</div>
-
-				<div class = "armyDisplay">
-
-					<div class = "armyDisplayName">{{armyName}}</div>
-					<div class = "armyDisplayImage"><img src = {{armyImage}}></img></div>
-					<div class = "armyInfo">
-						Army Size: {{armySize}} <br/>
-						Weapons Level: {{armyWeapon}}
-					</div>
-					<a href = "#/army"><button class = "changebtn btn btn-primary">Change Army</button></a>
-				</div>
-				<a href = "#/battle"><div class = "begin">Begin Battle</div></a>
-			</div>
-		</script>
-
-		<script type="text/ng-template" id="/army.html">
-			<div class = "customizeScreen">
-				<div class = "armyCreation">
-					<div class = "creationTitle">Create your own Army</div>
-					<div class = "creationInputs">
-						<form class = "" name='data' ng-submit='addNewArmy(data)'>
-							<input id = "newArmyName" class = "form-control myinput" placeholder="Name" ng-model='data.name'/>
-
-							<input id = "newArmyImage" class = "form-control myinput" placeholder="Image src (default provided)" ng-model='data.image'/>
-
-							<input id = "newArmyWeapon" class = "form-control myinput" placeholder="Weapon Level (1-10)" ng-model='data.weapon'/>
-
-							<input id = "newArmySize" class = "form-control myinput" placeholder="Army Size (1-10)" ng-model='data.size'/>
-
-							<button class = "btn btn-primary myinput" type='submit'>Create</button>
-						</form>
-					</div>
-				</div>
-				<div ng-repeat="army in armies | side" class = "armyOption" ng-click="updateArmyChoice(army)">
-					<div class =  "armyOptionName">{{army.name}}</div>
-					<a href = "#/prep"><div class = "armyOptionImage"><img src = {{army.image}}></img></div></a>
-					Weapons Level: {{army.weapons}} </br>
-					Army Size: {{army.numbers}}
 				</div>
 			</div>
 		</script>
 
 		<script type="text/ng-template" id="/hero.html">
 			<div class = "customizeScreen">
-				<div class = "armyCreation">
-					<div class = "creationTitle">Create your own Hero</div>
-					<div class = "creationInputs">
-						<form class = "" name='data' ng-submit='addNewHero(data)'>
-							<input class = "form-control myinput" placeholder="Name" ng-model='data.name'/>
+				<table style="width: 100%; height: 100%">
+					<tr>
+						<td>
+							<div class = "armyCreation">
+								<div class = "creationTitle">Create your own Hero</div>
+								<div class = "creationInputs">
+									<form class = "" name='data' ng-submit='addNewHero(data)'>
+										<input class = "myinput" placeholder="Name" ng-model='data.name'/>
 
-							<input class = "form-control myinput" placeholder="Image src (default provided)" ng-model='data.image'/>
+										<input class = "myinput" placeholder="Image src (default provided)" ng-model='data.image'/>
 
-							<input class = "form-control myinput" placeholder="Ability 1 (see options below)" ng-model='data.ability1'/>
+										<input class = "myinput" placeholder="Ability 1 (see options below)" ng-model='data.ability1'/>
 
-							<input class = "form-control myinput" placeholder="Ability 2 (must be spelled correctly)" ng-model='data.ability2'/>
+										<input class = "myinput" placeholder="Ability 2 (must be spelled correctly)" ng-model='data.ability2'/>
 
-							<button class = "btn btn-primary myinput" type='submit'>Create</button>
-						</form>
-					</div>
-				</div>
-				<div class = "abilityList">
-					 <div class = "creationTitle">Abilities</div></br>
-					<div ng-repeat="power in powers" class = "power">
-						<strong>{{power.name}}</strong></br>
-						{{power.description}}
-					</div>
-				</div>
-
-				<div ng-repeat="hero in heros | side" class = "armyOption" ng-click="updateHeroChoice(hero)">
-					<div class =  "armyOptionName">{{hero.name}}</div>
-					<a href = "#/prep"><div class = "armyOptionImage"><img src = {{hero.image}}></img></div></a>
-					Ability 1: {{hero.power1.name}} </br>
-					Ability 2: {{hero.power2.name}}
-				</div>
+										<button class = "btn btn-primary myinput" type='submit'>Create</button>
+									</form>
+								</div>
+							</div>
+						</td>
+						<td style="width: 60%">
+							<div style="text-align:center">
+								<a href = "#/prep" ng-repeat="hero in heros | side">
+									<div class = "armyOption" ng-click="updateHeroChoice(hero)">
+										<div class =  "armyOptionName">{{hero.name}}</div>
+										<img class = "armyOptionImage" src = {{hero.image}}></img><br>
+										Abilities: {{hero.power1.name}}, {{hero.power2.name}}
+									</div>
+								</a>
+							</div>
+						</td>
+						<td>
+							<div class = "abilityList">
+								<div class = "creationTitle">Abilities</div></br>
+								<div ng-repeat="power in powers" class = "power">
+									<strong>{{power.name}}</strong></br>
+									{{power.description}}
+								</div>
+							</div>
+						</td>
+					</tr>
+				</table>
 			</div>
 		</script>
 
+		<script type="text/ng-template" id="/army.html">
+			<div class = "customizeScreen">
+				<table style="width: 100%; height: 100%">
+					<tr>
+						<td>
+							<div class = "armyCreation">
+								<div class = "creationTitle">Create your own Army</div>
+								<div class = "creationInputs">
+									<form class = "" name='data' ng-submit='addNewArmy(data)'>
+										<input id = "newArmyName" class = "myinput" placeholder="Name" ng-model='data.name'/>
+
+										<input id = "newArmyImage" class = "myinput" placeholder="Image src (default provided)" ng-model='data.image'/>
+
+										<input id = "newArmyWeapon" class = "myinput" placeholder="Weapon Level (1-10)" ng-model='data.weapon'/>
+
+										<input id = "newArmySize" class = "myinput" placeholder="Army Size (1-10)" ng-model='data.size'/>
+
+										<button class = "btn btn-primary myinput" type='submit'>Create</button>
+									</form>
+								</div>
+							</div>
+						</td>
+						<td style="width: 80%">
+							<div style="text-align:center">
+								<a href = "#/prep" ng-repeat="army in armies | side">
+									<div class = "armyOption" ng-click="updateArmyChoice(army)">
+										<div class =  "armyOptionName">{{army.name}}</div>
+										<img class = "armyOptionImage" src = {{army.image}}></img><br>
+										Weapons Level: {{army.weapons}} </br>
+										Army Size: {{army.numbers}}
+									</div>
+								</a>
+							</div>
+						</td>
+					</tr>
+				</table>
+
+			</div>
+		</script>
 
 		<script type="text/ng-template" id="/battle.html">
 			<div class="battleScreen">
 				<div class = "lightDisplay">
 
-					<div class = "heroDisplayName">{{light.hero.name}}</div>
-					<div class = "heroDisplayImage"><img src= {{light.hero.image}}></img></div>
-					<div class = "armyDisplayImage"><img src = {{light.army.image}}></img></div>
+					<div class = "unitDisplayName">{{light.hero.name}}</div>
+					<div class = "unitDisplayImage"><img src= {{light.hero.image}}></img></div>
+					<div class = "unitDisplayImage"><img src = {{light.army.image}}></img></div>
 					<div class = "armyInfo">
 						Army Size:<span style = "color:red">{{lightLife}}</span> <br/>
 					</div>
@@ -140,9 +181,9 @@
 
 				<div class = "darkDisplay">
 
-					<div class = "heroDisplayName">{{dark.hero.name}}</div>
-					<div class = "heroDisplayImage"><img src= {{dark.hero.image}}></img></div>
-					<div class = "armyDisplayImage"><img src = {{dark.army.image}}></img></div>
+					<div class = "unitDisplayName">{{dark.hero.name}}</div>
+					<div class = "unitDisplayImage"><img src= {{dark.hero.image}}></img></div>
+					<div class = "unitDisplayImage"><img src = {{dark.army.image}}></img></div>
 					<div class = "armyInfo">
 						Army Size: <span style = "color:red">{{darkLife}}</span> <br/>
 					</div>
